added new pictures and text

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -3,32 +3,35 @@
 {% block content %}
 
 <style>
-    #leftBottomnMenu{
+    #leftBottomnMenu {
         position: relative;
-        z-index : 1;
+        z-index: 1;
     }
+
     #leftBottomnMenu:before {
-        content : "";
+        content: "";
         position: absolute;
         float: left;
-        left    : 0;
-        bottom  : 0;
-        height  : 1px;
-        width   : 89%; 
+        left: 0;
+        bottom: 0;
+        height: 1px;
+        width: 89%;
         border-bottom: 1px solid #0A3644;
     }
-    #rigthBottomnMenu{
+
+    #rigthBottomnMenu {
         position: relative;
-        z-index : 1;
+        z-index: 1;
     }
+
     #rigthBottomnMenu:before {
-        content : "";
+        content: "";
         position: absolute;
         float: left;
-        left    : 10%;
-        bottom  : 0;
-        height  : 1px;
-        width   : 90%; 
+        left: 10%;
+        bottom: 0;
+        height: 1px;
+        width: 90%;
         border-bottom: 1px solid #0A3644;
     }
 </style>
@@ -41,45 +44,14 @@
             <li>
                 <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220422_market_1735978_5171730_1.a3a05e65f6b45e45941b3a3c64cbe95e.jpg/optimize.webp"
                     alt="" uk-cover>
-                <!-- <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
-                    style="margin-left: 30%; ">
-
-                    <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
-
-                    <p style="font-size: 5rem; color: white" class="uk-margin uk-text-capitalize">название бренда</p>
-
-                    <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
-                        href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
-                </div> -->
             </li>
             <li>
                 <img src="https://avatars.mds.yandex.net/get-adfox-content/2804317/220411_market_1873907_5182900_1.e9b71f0ba8037f38fb09d63d5397b830.jpg/optimize.webp"
                     alt="" uk-cover>
-                <!-- <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
-                    style="margin-left: 30%; ">
-
-                    <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
-
-                    <p style="font-size: 5rem; color: white" class="uk-margin-remove uk-text-capitalize">название бренда
-                    </p>
-
-                    <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
-                        href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
-                </div> -->
             </li>
             <li>
                 <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/220324_market_1857084_5129081_1.e357cbf0ab96c29f46277d61c4f439bf.png/optimize.webp"
                     alt="" uk-cover>
-                <!-- <div class="uk-position-center-left uk-position-small uk-flex uk-flex-column uk-text-left uk-light"
-                    style="margin-left: 30%; ">
-
-                    <h2 style="font-size: 3em" class="uk-margin">Заголовок</h2>
-
-                    <p style="font-size: 5em; color: white" class="uk-margin uk-text-capitalize">название бренда</p>
-
-                    <a style="font-size: 25px; background-color: #B54F00; padding: 2%; text-transform: none; border-color: #B54F00;"
-                        href="" class="uk-width-1-2 uk-button uk-button-default">Посмотреть</a>
-                </div> -->
             </li>
         </ul>
 
@@ -102,17 +74,19 @@
         <!-- start of template -->
         <div class="uk-flex-inline uk-flex-center" id="leftBottomnMenu">
             <div class="uk-width-2-5 uk-flex uk-flex-bottom">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png"
+                <img src="https://img.freepik.com/free-photo/fashion-portrait-of-young-elegant-woman_1328-2743.jpg?w=740&t=st=1662389608~exp=1662390208~hmac=3ec62a34d66e64b9bc8a326f921835704d4044ab136dcdb40355315ee5abaea4"
                     alt="" width="500" height="800">
             </div>
             <div class="uk-width-2-5" style="border-left: 1px solid #0A3644;">
                 <h2 class="uk-flex uk-flex-center uk-flex-middle"
                     style="width: 65px; height: 65px; color: white; background-color: #0A3644;">1</h2>
                 <div class="uk-text-left uk-width-4-5" style="margin: 0 auto">
-                    <h1>Дизайнерская одежда</h1>
+                    <h1>Дизайнерская одежда
+                    </h1>
                     <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Всегда мечтали выделяться из толпы
-                        ярким луком? Тогда вы пришли по адресу. Тут вы сможете найти
-                        любой наряд на свой вкус и цвет</p>
+                        ярким луком? Тогда вы точно пришли по адресу. В BeFreela вы найдёте одежду для любых образов на
+                        свой вкус и цвет
+                    </p>
                 </div>
             </div>
         </div>
@@ -122,16 +96,18 @@
         <div class="uk-flex-inline uk-flex-center uk-flex-bottom" id="rigthBottomnMenu">
             <div class="uk-width-2-5 uk-flex uk-flex-wrap uk-flex-wrap-around">
                 <div class="uk-text-left uk-width-1" style="margin: 10% auto 0 auto; padding-right: 10%">
-                    <h1>Сумки</h1>
-                    <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Не можете подобрать нужную сумку под
-                        новый наряд? Здесь вы можете найти все, что вам захочется.</p>
+                    <h1>Обувь</h1>
+                    <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Залог хорошего образа и приятной
+                        прогулки - удобная обувь, в которой ты будешь чувствовать себя уверенно и комфортно. Скорее
+                        переходи во вкладку «Обувь» и смотри новинки BeFreela
+                    </p>
                 </div>
                 <h2 class="uk-flex uk-flex-center uk-flex-middle"
                     style="margin-bottom: 0px;width: 65px; height: 65px; color: #0A3644; border: 1px solid #0A3644; border-bottom: none">
                     2</h2>
             </div>
             <div class="uk-width-2-5" style="border-left: 1px solid #0A3644; padding-top: 5%">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png"
+                <img src="https://img.freepik.com/premium-photo/pair-of-white-male-sneakers-on-orange-background-stylish-shoes-isolated_77190-5487.jpg?w=740"
                     alt="" width="500" height="800">
             </div>
         </div>
@@ -140,14 +116,16 @@
         <!-- start of template -->
         <div class="uk-flex-inline uk-flex-center" id="leftBottomnMenu">
             <div class="uk-width-2-5">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png"
+                <img src="https://img.freepik.com/free-photo/beautiful-shot-of-a-black-purse-on-a-white-table-with-a-pink_181624-22681.jpg?w=1380&t=st=1662577832~exp=1662578432~hmac=b301ac8c4b860d94decec16e702b41611035faf4c09ce3feaf8b2105375dd8f9"
                     alt="" width="500" height="800">
             </div>
             <div class="uk-width-2-5 uk-flex uk-flex-bottom" style="border-left: 1px solid #0A3644">
                 <div class="uk-text-left uk-width-4-5" style="margin: 0 auto 15% auto">
-                    <h1>Скульптуры</h1>
-                    <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Всегда мечтали выделяться из толпы
-                        ярким луком? Тогда вы пришли по адресу. Тут вы сможете найти любой наряд на свой вкус и цвет</p>
+                    <h1>Сумки</h1>
+                    <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Не можете подобрать нужную сумку под
+                        новый образ? Здесь вы можете найти все, что вам захочется. Дай волю фантазии и подбери
+                        ослепительные образы вместе с сумками из BeFreela
+                    </p>
                 </div>
                 <h2 class="uk-flex uk-flex-center uk-flex-middle"
                     style="margin-bottom: 0px; width: 65px; height: 65px; color: white; background-color: #0A3644;">3
@@ -161,16 +139,17 @@
             <div class="uk-width-2-5 uk-flex uk-flex-wrap uk-flex-wrap-around">
                 <div class="uk-text-left uk-width-1" style="margin: 10% auto 0 auto; padding-right: 10%">
                     <h1>Интерьер</h1>
-                    <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Не можете подобрать нужную сумку под
-                        новый наряд? Здесь вы можете найти все, что вам захочется. Дай воли фантазии и придумай свою
-                        сумку</p>
+                    <p class="uk-text-meta uk-text-break" style="font-size: 1.5em">Дом - это наше спокойствие,
+                        безопасность, гармония и удобство. Его украшает не ремонт, а душевность. Послушай своё сердце и
+                        создай тёплый уютный маленький мир вместе с BeFreela
+                    </p>
                 </div>
                 <h2 class="uk-flex uk-flex-center uk-flex-middle"
                     style="margin-bottom: 0px;width: 65px; height: 65px; color: #0A3644; border: 1px solid #0A3644; border-bottom: none">
                     4</h2>
             </div>
             <div class="uk-width-2-5" style="border-left: 1px solid #0A3644; padding: 5% 0 2% 0;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png"
+                <img src=" https://img.freepik.com/free-photo/aromatherapy-table-setting-with-scented-candles-and-towel_53876-123939.jpg?w=740&t=st=1662386863~exp=1662387463~hmac=65c188e5f579d3d7f82eca53aaee79ce00b8a0f78d7f3d889018cc0b7e31dba"
                     alt="" width="500" height="800">
             </div>
         </div>
@@ -180,34 +159,37 @@
 </div>
 
 
-    <div class="uk-container uk-width-1 uk-flex uk-flex-around uk-flex-middle" style="color: white; background-color: #0A3644; padding: 5%">
-        <div class="uk-flex-row">
-            <h3 style="color: white">ДЛЯ ПОКУПАТЕЛЕЙ</h3>
-            <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Pricing</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Settings</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Orders</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Help</a></li>
-            </ul>
-        </div>
-        <div class="uk-flex-row">
-            <h3 style="color: white">ДЛЯ ПАРТНЕРОВ</h3>
-            <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Pricing</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Settings</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Orders</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Help</a></li>
-            </ul>
-        </div>
-        <div class="uk-flex-row">
-            <h3 style="color: white">КОНТАКТЫ:</h3>
-            <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Россия, г. Москва</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="email:degtyarevea12@gmail.com">degtyarevea12@gmail.com</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="tel:+7 (925) 574 13-71">+7 (925) 574 13-71</a></li>
-                <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="">+7 (925) 574 13-71</a></li>
-            </ul>
-        </div>
+<div class="uk-container uk-width-1 uk-flex uk-flex-around uk-flex-middle"
+    style="color: white; background-color: #0A3644; padding: 5%">
+    <div class="uk-flex-row">
+        <h3 style="color: white">ДЛЯ ПОКУПАТЕЛЕЙ</h3>
+        <ul class="uk-nav uk-navbar-dropdown-nav">
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Pricing</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Settings</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Orders</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Help</a></li>
+        </ul>
     </div>
+    <div class="uk-flex-row">
+        <h3 style="color: white">ДЛЯ ПАРТНЕРОВ</h3>
+        <ul class="uk-nav uk-navbar-dropdown-nav">
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Pricing</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Settings</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Orders</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Help</a></li>
+        </ul>
+    </div>
+    <div class="uk-flex-row">
+        <h3 style="color: white">КОНТАКТЫ:</h3>
+        <ul class="uk-nav uk-navbar-dropdown-nav">
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Россия, г. Москва</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link"
+                    href="email:degtyarevea12@gmail.com">degtyarevea12@gmail.com</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="tel:+7 (925) 574 13-71">+7 (925) 574
+                    13-71</a></li>
+            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="">+7 (925) 574 13-71</a></li>
+        </ul>
+    </div>
+</div>
 
 {% endblock %}
