rebased phone sized pages

--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -38,7 +38,7 @@
         <div class="uk-offcanvas-bar">
             <div class="uk-flex-column ">
                 <div style="margin: auto; width: 50%" class="uk-margin-medium-bottom">
-                    <img src="../../media/{{user.userImage}}" style="border-radius: 5 em;">
+                    <img src="{{user.userImage}}" style="border-radius: 5 em;">
                 </div>
                 <div style="text-align: center">
                     <p>{{user.first_name}} {{user.last_name}}</p>
