--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -6,7 +6,7 @@
 <div class="uk-card uk-card-default uk-card-body uk-width-4-5" style="margin: 0  auto">
     <container class="container uk-flex uk-flex-center uk-flex-top uk-width-1">
         <div class="uk-display-inline-block uk-width-1-2 uk-text-center">
-            <img src="{{product.picture.url}}" alt="" width="500">
+            <img src="{{product.picture}}" alt="" width="500">
         </div>
         <div class="uk-flex uk-flex-column uk-width-1-2">
             <div>
@@ -18,7 +18,7 @@
             <!--  -->
             <div class="uk-flex">
                 <div class="uk-width-auto uk-display-inline uk-margin-small-right">
-                    <img src="{{image_user_product.url}}" class="uk-border-circle" style="width: 60px; height: 60px">
+                    <img src="{{image_user_product}}" class="uk-border-circle" style="width: 60px; height: 60px">
                 </div>
                 <div class="uk-width-expand uk-display-inline">
                     <h3 class="uk-card-title uk-margin-remove-bottom ">{{product.id_creator}}
