--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -207,7 +207,7 @@
 
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-3">
 
-                                <label>korr_check</label>
+                                <label>КОР</label>
                                 <br>
                                 <input type="text" id="companyInput" name="korr_check" maxlength="50"
                                     class="form-control" placeholder="{{creator.korr_check}}"
