--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -203,7 +203,7 @@
                             </li>
 
                             <li><br>
-                                <p class="uk-text-break">Обязуетесь соблюдать партнёрские соглашение </p>
+                                <p class="uk-text-break">Обязуетесь соблюдать партнёрские соглашения </p>
                             </li>
 
                             <li><br>
@@ -340,7 +340,7 @@
                                 d="M26.05 44.925V50H5.7V44.925H12.9V25.075C12.9 24.6417 12.9083 24.2 12.925 23.75C12.9417 23.3 12.9667 22.8417 13 22.375L8.25 26.325C7.91667 26.575 7.59167 26.7333 7.275 26.8C6.95833 26.8667 6.65833 26.875 6.375 26.825C6.09167 26.7583 5.84167 26.6583 5.625 26.525C5.40833 26.375 5.24167 26.225 5.125 26.075L2.95 23.15L14.1 13.7H19.775V44.925H26.05Z"
                                 fill="#3A0078"></path>
                         </svg>
-                        <p class="uk-text-break uk-display-inline-block uk-text-large">регистрация в налоговых органах</p>
+                        <p class="uk-text-break uk-display-inline-block uk-text-large">Регистрация в налоговых органах</p>
                     </div>
                 </div>
 
